scoring functioning, add some css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="./src/main.js"></script>
     <script src="./src/game.js"></script>
     <script src="./src/arrow.js"></script>
-    <h1> hhhaleo </h1>
 </body>
 
 </html>
+
+<!-- easier to write the main html here and copypaste... -->
