--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@
 </html>
 
 <!-- easier to write the main html here and copypaste... -->
-
+<!--SOS why cant I add createSplashScreen as eventlistener callback here??-->
