--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- are these ok? -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- these ok? -->
     <title>m1 project game</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
@@ -15,6 +15,3 @@
 </body>
 
 </html>
-
-<!-- easier to write the main html here and copypaste... -->
-<!--SOS why cant I add createSplashScreen as eventlistener callback here??-->
